@@ -19,6 +19,7 @@ import bio.terra.workspace.service.resource.model.CloningInstructions;
 import bio.terra.workspace.service.resource.model.StewardshipType;
 import bio.terra.workspace.service.resource.referenced.exception.InvalidReferenceException;
 import bio.terra.workspace.service.workspace.model.CloudPlatform;
+import com.azure.core.util.ExpandableStringEnum;
 import com.azure.resourcemanager.compute.models.VirtualMachineSizeTypes;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableList;
@@ -167,7 +168,7 @@ public class ResourceValidationUtils {
    * <p>This method DOES NOT guarantee that the bucket name is valid.
    *
    * @param name gcs-bucket name
-   * @param validationFailureError
+   * @param validationFailureError validationFailureError
    * @throws InvalidNameException throws exception when the bucket name fails to conform to the
    *     Google naming convention for bucket name.
    */
@@ -259,16 +260,13 @@ public class ResourceValidationUtils {
     }
     // AWS Code commit host server is region specific. Here are the list of all the valid git
     // connection endpoint: https://docs.aws.amazon.com/codecommit/latest/userguide/regions.html.
-    if (hostName.startsWith("git-codecommit.") && hostName.endsWith(".amazonaws.com")) {
-      return true;
-    }
-    return false;
+    return hostName.startsWith("git-codecommit.") && hostName.endsWith(".amazonaws.com");
   }
   /**
    * Validate GCS object name.
    *
    * @param objectName full path to the object in the bucket
-   * @throws InvalidNameException
+   * @throws InvalidNameException InvalidNameException
    */
   public static void validateGcsObjectName(String objectName) {
     int nameLength = objectName.getBytes(StandardCharsets.UTF_8).length;
@@ -368,7 +366,7 @@ public class ResourceValidationUtils {
   public static void validateBqDataTableName(String name) {
     if (StringUtils.isEmpty(name)
         || !BQ_DATATABLE_NAME_VALIDATION_PATTERN.matcher(name).matches()) {
-      logger.warn("Invalid data table name %s", name);
+      logger.warn("Invalid data table name {}", name);
       throw new InvalidNameException(
           "Invalid BQ table name specified. Name must be 1-1024 characters, contains Unicode characters in category L"
               + " (letter), M (mark), N (number), Pc (connector, including underscore), Pd (dash), Zs (space)");
@@ -454,8 +452,7 @@ public class ResourceValidationUtils {
 
   public static void validateAzureVmSize(String vmSize) {
     if (!VirtualMachineSizeTypes.values().stream()
-        .map(x -> x.toString())
-        .collect(Collectors.toList())
+            .map(ExpandableStringEnum::toString).toList()
         .contains(vmSize)) {
       logger.warn("Invalid Azure vmSize {}", vmSize);
       throw new InvalidReferenceException(
